...
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:text="Search"
            android:textIsSelectable="false" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_menu" />
    </RelativeLayout>
...
